[package]
name = "hash_finder"
version = "0.1.0"
authors = ["Konstantin Antonov <knstantna@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = { version = "0.1.12" }
sha256 = { version = "1.4.0" }
rayon = { version = "1.7.0" }
